# incident-triage-copilot

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KNOWN_ISSUES.md  README.md  SECURITY.md  agent.yaml  azure.yaml  blog_post.md  pyproject.toml  requirements.txt  test_triage.py
.github/workflows/: ci.yml
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/modules/: acr.bicep  ai-foundry.bicep  container-app.bicep  identity.bicep  monitoring.bicep
scripts/: e2e_test.py  smoke_test.py
src/: __init__.py  __main__.py  app.py  config.py  foundry_client.py  models.py  telemetry.py
src/agents/: __init__.py  base.py  coordinator.py  diagnostics_agent.py  remediation_agent.py  research_agent.py
src/prompts/: coordinator.md  diagnostics_agent.md  remediation_agent.md  research_agent.md
src/static/: index.html
src/static/css/: style.css
src/static/js/: app.js
tests/: test_agents.py  test_api.py  test_coordinator.py  test_models.py  test_routing.py
