[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[project]
name = "incident-triage-copilot"
version = "0.1.0"
description = "Multi-agent incident triage copilot powered by Microsoft Foundry"
requires-python = ">=3.11"
